# rust_egui_tarpc_example

./: Cargo.toml  README.md
basic/: Cargo.toml
basic/src/: client.rs
egui/: Cargo.toml
egui-mspc/src/: main.rs
egui/src/: main.rs
src/: client.rs  gui.rs  lib.rs  main.rs  rpc.rs  server.rs
