[package]
name = "egui-mspc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
anyhow = "1.0.95"
eframe = "0.30.0"
env_logger = "0.11.6"
futures = "0.3.31"
log = "0.4.22"
tarpc = { version = "0.35.0", features = ["full", "serde-transport", "serde-transport-json", "tcp", "tokio1"] }
tokio = { version = "1.43.0", features = ["full", "rt-multi-thread", "sync"] }
